<resources>
    <string name="app_name">CadastroAlunos</string>
    <string name="ra">Ra</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="dtNasc">Dt. Nascimento</string>
    <string name="dtMatricula">Dt. Matricula</string>
    <string name="cursos">Cursos</string>
    <string name="periodo">Período</string>
    <string name="selecioneCurso">Selecione o Curso</string>
    <string name="selecionePeriodo">Selecione o Período</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="curso">Curso</string>
    <string name="addAluno">Adicionar Aluno</string>
    <string name="codDisciplina">Código Disciplina</string>
    <string name="cargaHoraria">Carga Horária</string>
    <string name="professor">Professor</string>
    <string name="selecioneProfessor">Selecione o Professor</string>
    <string name="nomeProfessor">Nome do Professor</string>
    <string name="regimeTurma">Regime Turma</string>
    <string name="codTurma">Código Turma</string>
    <string name="nomeTurma">Nome da Turma</string>
    <string name="selecioneRegimeTurma">Regime da turma</string>
    <string name="selecioneTurma">Selecione a Turma</string>
    <string name="pegarId">Id</string>
    <string name="listaAlunos">nomeAlunos</string>
    <string name="selecioneAlunos">Selecionar Alunos</string>
</resources>